# The-Great-Camp-Crawl

./: .gitignore  .vercelignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  sitemap.xml
.kilo/: agent-manager.json
apps/research-ui/backend/: app.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schema_runtime.py  schemas.py  scraper.py  settings.py  vercel.json
apps/research-ui/backend/api/: index.py
apps/research-ui/backend/routers/: __init__.py  answers.py  auth.py  camps.py  contributions.py  evidence.py  export.py  favorites.py  missions.py  reviews.py  scrape.py
camps/: index.html
discovery-pipeline/: index.html
docs/: discovery-pipeline.md  index.md  methodology.md  scope.md  workflow.md
methodology/: index.html
scope/: index.html
scripts/: DUCKDUCKGO_DISCOVERY.md  apply_enrichment_jsonl.py  build_mkdocs.py  build_pending_dossier_queries.py  build_pending_dossier_resolution_report.py  capture_candidate_evidence.py  capture_to_evidence_index.py  capture_triaged_camps.py  ddg_discovery_to_candidate_schema.py  discover_and_capture.py  enrich_camps_with_llm.py  enrich_local_no_db.py  generate_college_precollege_prompt_pack.py  generate_followup_queue.py  generate_indexes.py  generate_region_discovery_prompt_pack.py  google_search_via_chrome.py  html_to_markdown.py  import_dossiers_to_db.py  ingest_discovery_reports.py  normalize_existing_discovery_report.py  render_json_dump_to_md.py  requirements-discovery.txt  run_batch_searxng.py  run_college_precollege_nationwide.py  run_discovery_pipeline.py  (+16 more)
(+3413 files in other folders)
