[project]
name = "research-ui-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "bcrypt<5",
  "fastapi>=0.111.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic[email]>=2.0.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
]

[project.scripts]
app = "app:app"
